FIX: forms select line height
* text was getting cut off at bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4298,9 +4298,10 @@ select {
   border-radius: 2px;
   border: 1px solid #EEEEEE;
   background-color: #FAFAFA;
-  padding: 8px 26px 8px 8px; }
+  padding: 8px 26px 8px 8px;
+  line-height: 1.2; }
 
-/* line 147, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+/* line 148, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
 .custom-select {
   display: inline-block;
   position: relative; }
@@ -4318,58 +4319,58 @@ select {
     top: 50%;
     right: 8px;
     margin-top: -4px; }
-  /* line 158, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+  /* line 159, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
   .custom-select select {
     -webkit-appearance: none;
     -moz-appearance: none; }
 
-/* line 164, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+/* line 165, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
 fieldset {
   position: relative;
   padding-top: 24px; }
-  /* line 168, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+  /* line 169, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
   fieldset legend {
     position: absolute;
     top: 0;
     left: 0; }
-    /* line 174, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+    /* line 175, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
     fieldset legend svg.iconic {
       fill: #444444;
       margin-right: 8px; }
-    /* line 179, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+    /* line 180, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
     fieldset legend + p {
       margin-top: -5px; }
-  /* line 184, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+  /* line 185, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
   fieldset .form-field {
     margin-bottom: 0; }
 
-/* line 191, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+/* line 192, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
 form.dk-bg, .form.dk-bg {
   border-radius: 2px;
   border: 2px solid #dad3ca;
   background-color: #EFECE8;
   padding: 24px; }
-  /* line 203, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+  /* line 204, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
   form.dk-bg table tbody tr:nth-child(even), .form.dk-bg table tbody tr:nth-child(even) {
     background-color: #FFFFFF; }
-/* line 211, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+/* line 212, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
 form table, .form table {
   width: 100%;
   max-width: 100%; }
 
-/* line 217, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+/* line 218, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
 .tgl {
   display: none !important; }
-  /* line 222, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+  /* line 223, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
   .tgl, .tgl:after, .tgl:before, .tgl *, .tgl *:after, .tgl *:before, .tgl + .tgl-btn {
     -moz-box-sizing: border-box;
          box-sizing: border-box; }
-    /* line 225, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+    /* line 226, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
     .tgl::-moz-selection, .tgl:after::-moz-selection, .tgl:before::-moz-selection, .tgl *::-moz-selection, .tgl *:after::-moz-selection, .tgl *:before::-moz-selection, .tgl + .tgl-btn::-moz-selection {
       background: none; }
     .tgl::selection, .tgl:after::selection, .tgl:before::selection, .tgl *::selection, .tgl *:after::selection, .tgl *:before::selection, .tgl + .tgl-btn::selection {
       background: none; }
-  /* line 230, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+  /* line 231, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
   .tgl + .tgl-btn {
     direction: ltr;
     outline: 0;
@@ -4385,7 +4386,7 @@ form table, .form table {
     border-radius: 2em;
     background: #D6D5D2;
     transition: all .4s ease; }
-    /* line 243, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+    /* line 244, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
     .tgl + .tgl-btn:after, .tgl + .tgl-btn:before {
       display: block;
       content: "";
@@ -4394,19 +4395,19 @@ form table, .form table {
       width: 50%;
       height: 22px;
       box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.24); }
-    /* line 254, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+    /* line 255, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
     .tgl + .tgl-btn:after {
       left: 0;
       border-radius: 50%;
       background: #FFFFFF;
       transition: all .2s ease; }
-    /* line 261, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+    /* line 262, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
     .tgl + .tgl-btn:before {
       display: none; }
-  /* line 269, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+  /* line 270, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
   .tgl:checked + .tgl-btn {
     background: #c7ecba; }
-    /* line 272, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
+    /* line 273, /Users/M8M/Sites/platform-pattern-library/assets/sass/1_basics/_forms.scss */
     .tgl:checked + .tgl-btn:after {
       left: 50%;
       background: #4fab2f; }
