--- a/assets/sass/1_basics/_forms.scss
+++ b/assets/sass/1_basics/_forms.scss
@@ -142,6 +142,7 @@ select {
     //background: $color-light-delta url(../img/icons/chevron-bottom.svg) 90% center no-repeat;
     background-color: $color-light-delta;
     @include lrswap(padding, $tiny-spacing 26px $tiny-spacing $tiny-spacing);
+    line-height: 1.2;
 }
 
 .custom-select {
